리스트수정

--- a/index.html
+++ b/index.html
@@ -117,6 +117,11 @@
                 <td class="tleft">관광지상세</td>
                 <td class="tleft"><a href="./html/sights.html" target="_blank">./html/sights.html</a></td>
             </tr>
+            <tr>
+                <td class="no"></td>
+                <td class="tleft">관광지상세-가나다라</td>
+                <td class="tleft"><a href="./html/sights.html" target="_blank">./html/sights.html</a></td>
+            </tr>
         </tbody>
     </table>
 
