페이지작업 추가

--- a/html/search.html
+++ b/html/search.html
@@ -24,7 +24,7 @@
 			<!-- start of contents -->
 			<div class="noData">검색어가 없습니다.</div>
 
-			<h2 class="titDep-02 titTop">길 전체 <span class="total">3</span>개</h2>
+			<h2 class="searchTit">길 전체 <span class="total">3</span>개</h2>
 			<ul class="searchList">
 				<li>
 					<a href="#">
