--- a/html/sights.html
+++ b/html/sights.html
@@ -12,6 +12,7 @@
 	<p class="skip"><a href="#container">본문 바로가기</a></p>
 	<section id="wrapper" class="wrapper">
 		<header>
+			<button type="button" class="btPrev">이전</button>
 			<h1 class="titSub">관광지 상세</h1>
 			<div class="topUtil">
 				<button type="button" class="btSos">SOS</button>
@@ -37,10 +38,10 @@
 				<li>운영시간 : 09:00 ~ 18:00 (연중무휴)</li>
 				<li>전화 : 070-7018-9441</li>
 			</ul>
-			<p class="flagWrap">
-				<span class="flag">주차장</span>
-				<span class="flag">편의점</span>
-				<span class="flag">화장실</span>
+			<p class="badgeWrap">
+				<span class="badge">주차장</span>
+				<span class="badge">편의점</span>
+				<span class="badge">화장실</span>
 			</p>
 
 			<h3>상세정보</h3>
@@ -59,11 +60,15 @@
 			<h3>위치정보</h3>
 			<p class="icoAddress">강릉시 풍천면 천년숲서로 29</p>
 			<div class="mapArea">지도영역</div>
-
-			<div class="infoDesk">강릉 걷는 길 안내소 <br>전화번호 : <a href="tel:033)647-0991">033)647-0991</a><br>주소 : 강릉시 성산면 삼포암길 17</div>
 			<!-- // end of contents -->
 		</div>
 	</section>
+
+	<footer>
+		<p>강릉 걷는 길 안내소</p>
+		<p>전화번호 : 033)647-0991</p>
+		<p>주소 : 강릉시 성산면 삼포암길 17</p>
+	</footer>
 	
 </body>
 </html>
