--- a/html/stamp.html
+++ b/html/stamp.html
@@ -12,6 +12,7 @@
 	<p class="skip"><a href="#container">본문 바로가기</a></p>
 	<section id="wrapper" class="wrapper">
 		<header>
+			<button type="button" class="btPrev">이전</button>
 			<h1 class="titSub">스탬프</h1>
 			<div class="topUtil">
 				<button type="button" class="btSos">SOS</button>
