--- a/html/stamp_detail_popup.html
+++ b/html/stamp_detail_popup.html
@@ -66,6 +66,28 @@
 					<buton class="btnLine exchange"><span>교환권 발급</span></buton>
 				</div>
 			</div>
+
+			<!-- dimmed popup -->
+			<div class="stampCoupon">
+				<div class="inner">
+					<div class="top">
+						<p class="msg">축하합니다 <span>길을 모두 완주하셨어요!<br>완주 혜택을 받아가세요.</span></p>
+						<p class="photo">이미지영역</p>
+						<p class="barcode"> <!-- 혜택발급완료 스탬프 노출시 pass클래스 추가 -->
+							<span class="txt">아래 바코드를 교환처에서 보여주세요</span>
+							<span class="img">바코드이미지영역</span>
+						</p>
+					</div>
+					<div class="bottom">
+						<ul class="listType">
+							<li>교환처 : 강릉시 성산면 삼포암길 17</li>
+							<li>전화번호 : 033)647-0991</li>
+						</ul>
+						<button type="button" class="btnDefault btnL action">완주 자랑하기</button>
+					</div>
+				</div>
+			</div>
+			<!-- // dimmed popup -->
 			<!-- // end of contents -->
 		</div>
 	</section>
