--- a/html/wish_history_tab01.html
+++ b/html/wish_history_tab01.html
@@ -13,45 +13,51 @@
 	<section id="wrapper" class="wrapper">
 		<header>
 			<button type="button" class="btPrev">이전</button>
-			<h1 class="titSub">알림</h1>
+			<h1 class="titSub">찜한 내역</h1>
 			<div class="topUtil">
 				<button type="button" class="btSos">SOS</button>
 				<button type="button" class="btSearch">검색</button>
 			</div>
 		</header>
-
+	
 		<div id="container" class="container">
 			<!-- start of contents -->
-			<h2 class="titDep-02 titTop">공지사항</h2>
+			<div class="tabMenu">
+				<a href="#" class="selected">장소</a>
+				<a href="#">코스</a>
+			</div>
 
-			<ul class="alimList">
+			<ul class="searchList">
 				<li>
 					<a href="#">
-						<span class="date">2023-03-22 ~ 2023-05-21</span>
-						<b>2023년 강릉바우길 다함께 걷기 축제</b>
+						<span class="photo"><img src="../images/dummy/@photo14.jpg" alt=""></span>
+						<dl>
+							<dt><span class="category">[자연관광]</span>바우길</dt>
+							<dd class="desc">강릉시 동문로 145</dd>
+						</dl>
 					</a>
 				</li>
 				<li>
 					<a href="#">
-						<span class="date">2023-03-22 ~ 2023-05-21</span>
-						<b>[코둘쉼터 걷기 프로그램] 해파랑길 걸으며 만나는 노거수 그리고 강릉의 커피 문화</b>
+						<span class="photo"><img src="../images/dummy/@photo14.jpg" alt=""></span>
+						<dl>
+							<dt><span class="category">[자연관광]</span>바우길</dt>
+							<dd class="desc">강릉시 동문로 145</dd>
+						</dl>
 					</a>
 				</li>
 				<li>
 					<a href="#">
-						<span class="date">2023-03-22 ~ 2023-05-21</span>
-						<b>[9구간 심곡항] 계단 통행 주의, 우회 권장</b>
-					</a>
-				</li>
-				<li>
-					<a href="#">
-						<span class="date">2023-03-22 ~ 2023-05-21</span>
-						<b>강릉 플러스 12월호 (강릉 바우길 주말 다 함께 걷기 소개)</b>
+						<span class="photo"><img src="../images/dummy/@photo14.jpg" alt=""></span>
+						<dl>
+							<dt><span class="category">[자연관광]</span>바우길</dt>
+							<dd class="desc">강릉시 동문로 145</dd>
+						</dl>
 					</a>
 				</li>
 			</ul>
 			<!-- // end of contents -->
-		</div>
+		</div><!-- //container -->
 	</section>
 	
 </body>
