--- a/index.html
+++ b/index.html
@@ -114,17 +114,76 @@
             </tr>
             <tr>
                 <td class="no"></td>
-                <td class="tleft">관광지상세</td>
-                <td class="tleft"><a href="./html/sights.html" target="_blank">./html/sights.html</a></td>
+                <td class="tleft">스탬프상세_교환권</td>
+                <td class="tleft"><a href="./html/stamp_detail_popup.html" target="_blank">./html/stamp_detail_popup.html</a></td>
             </tr>
             <tr>
                 <td class="no"></td>
                 <td class="tleft">관광지상세</td>
                 <td class="tleft"><a href="./html/sights.html" target="_blank">./html/sights.html</a></td>
             </tr>
+            <tr>
+                <td class="no"></td>
+                <td class="tleft">마이페이지</td>
+                <td class="tleft"><a href="./html/mypage.html" target="_blank">./html/mypage.html</a></td>
+            </tr>
+            <tr>
+                <td class="no"></td>
+                <td class="tleft">내정보</td>
+                <td class="tleft"><a href="./html/my_info.html" target="_blank">./html/my_info.html</a></td>
+            </tr>
+            <tr>
+                <td class="no"></td>
+                <td class="tleft">회원탈퇴</td>
+                <td class="tleft"><a href="./html/leave.html" target="_blank">./html/leave.html</a></td>
+            </tr>
+            <tr>
+                <td class="no"></td>
+                <td class="tleft">회원탈퇴완료</td>
+                <td class="tleft"><a href="./html/leave_complete.html" target="_blank">./html/leave_complete.html</a></td>
+            </tr>
+            <tr>
+                <td class="no"></td>
+                <td class="tleft">FAQ</td>
+                <td class="tleft"><a href="./html/faq.html" target="_blank">./html/faq.html</a></td>
+            </tr>
+            <tr>
+                <td class="no"></td>
+                <td class="tleft">FAQ_상세</td>
+                <td class="tleft"><a href="./html/faq_view.html" target="_blank">./html/faq_view.html</a></td>
+            </tr>
+            <tr>
+                <td class="no"></td>
+                <td class="tleft">찜한내역_장소</td>
+                <td class="tleft"><a href="./html/wish_history_tab01.html" target="_blank">./html/wish_history_tab01.html</a></td>
+            </tr>
+            <tr>
+                <td class="no"></td>
+                <td class="tleft">찜한내역_코스</td>
+                <td class="tleft"><a href="./html/wish_history_tab02.html" target="_blank">./html/wish_history_tab02.html</a></td>
+            </tr>
+            <tr>
+                <td class="no"></td>
+                <td class="tleft">1:1 문의하기</td>
+                <td class="tleft"><a href="./html/inquiry.html" target="_blank">./html/inquiry.html</a></td>
+            </tr>
+            <tr>
+                <td class="no"></td>
+                <td class="tleft">문의내역</td>
+                <td class="tleft"><a href="./html/inquiry_view.html" target="_blank">./html/inquiry_view.html</a></td>
+            </tr>
+            <tr>
+                <td class="no"></td>
+                <td class="tleft">문의</td>
+                <td class="tleft"><a href="./html/inquiry_write.html" target="_blank">./html/inquiry_write.html</a></td>
+            </tr>
+            <tr>
+                <td class="no"></td>
+                <td class="tleft">문의_삭제팝업</td>
+                <td class="tleft"><a href="./html/inquiry_write_popup.html" target="_blank">./html/inquiry_write_popup.html</a></td>
+            </tr>
         </tbody>
     </table>
-
     
 </section>
 </body>
