추가수정파일

--- a/html/inquiry.html
+++ b/html/inquiry.html
@@ -45,21 +45,21 @@
 			<ul class="alimList inquiry">
 				<li>
 					<a href="#">
-						<span class="status">답변대기</span>
+						<span class="status"><i>답변대기</i></span>
 						<b>숙소 예약 관련 문의</b>
 						<span class="date">2023-03-22</span>
 					</a>
 				</li>
 				<li>
 					<a href="#">
-						<span class="status re">답변완료</span>
+						<span class="status re"><i>답변완료</i></span>
 						<b>숙소 예약 관련 문의</b>
 						<span class="date">2023-03-22</span>
 					</a>
 				</li>
 				<li>
 					<a href="#">
-						<span class="status re">답변완료</span>
+						<span class="status re"><i>답변완료</i></span>
 						<b>숙소 예약 관련 문의</b>
 						<span class="date">2023-03-22</span>
 					</a>
@@ -67,8 +67,8 @@
 			</ul>
 
 			<div class="floatingBtns">
-				<div class="btnArea">
-					<buton class="btnLine exchange"><span>문의 작성하기</span></buton>
+				<div class="btnArea noBg">
+					<buton class="btnLine inquiry scroll"><span>문의 작성하기</span></buton> <!-- scroll클래스로 토글 제어 -->
 				</div>
 			</div>
 			<!-- // end of contents -->
