--- a/html/stamp_detail.html
+++ b/html/stamp_detail.html
@@ -63,7 +63,7 @@
 
 			<div class="floatingBtns">
 				<div class="btnArea noBg">
-					<buton class="btnLine exchange"><span>교환권 발급</span></buton>
+					<buton class="btnLine exchange scroll"><span>교환권 발급</span></buton> <!-- scroll클래스로 토글 제어 -->
 				</div>
 			</div>
 			<!-- // end of contents -->
