--- a/html/stamp.html
+++ b/html/stamp.html
@@ -13,7 +13,7 @@
 	<section id="wrapper" class="wrapper">
 		<header>
 			<button type="button" class="btPrev">이전</button>
-			<h1 class="titSub">스탬프</h1>
+			<h1 class="titSub">스탬프 <button type="button" class="btnBlue info">이용안내</button></h1>
 			<div class="topUtil">
 				<button type="button" class="btSos">SOS</button>
 				<button type="button" class="btSearch">검색</button>
