--- a/html/leave.html
+++ b/html/leave.html
@@ -28,20 +28,24 @@
 				<li>삭제된 정보는 복구가 불가능 합니다.</li>
 			</ul>
 			<span class="frmInp"><input type="checkbox" id="chkAgree01"><label for="chkAgree01">안내사항을 모두 확인하였으며, 이에 동의합니다.</label></span>
-
+			
 			<ul class="inpList">
-				<li class="multiForm">
+				<li class="inpWrap">
+					<label for="form01">탈퇴하시는 이유를 알려주세요.</label>
 					<div class="selectWrap">
 						<select id="form01">
 							<option>탈퇴 사유를 선택해주세요.</option>
 							<option>자주사용하지 않아요</option>
+							<option>자주사용하지 않아요</option>
+							<option>자주사용하지 않아요</option>
 						</select>
+
 					</div>
-					<label for="form01">탈퇴하시는 이유를 알려주세요.</label>
 				</li>
 				<li class="inpCertTime">
 					<input type="password" title="현재 비밀번호를 입력해주세요." id="form02" required>
 					<label for="form02">현재 비밀번호<span>를 입력해주세요</span></label>
+					<button type="button" class="icDel">삭제</button>
 				</li>
 			</ul>
 			<div class="btnWrap">
